HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties


Revision History:
20-Nov-2002
Problems fixed:
    1. HttpUnit now ignores empty parameters on form actions, as IE and Netscape do.

18-Nov-2002
Acknowledgements:
    Thanks to Neville Wylie for catching the top.parent and frame name index problems

Problems fixed:
    1. The parent attribute of the top frame was returning null rather than the frame.
    2. Frame names used as indexes into the Window.frames array were not being recognized.

17-Nov-2002
Problems fixed:
    1. Bug #637208 Link.click() no longer returns null when an 'onClick' event fails to return true.

Additions:
    1. Added support for Document.open, Document.close, and Document.write / writeln for new documents

16-Nov-2002
Problems fixed:
    1. Bug #638304 Interframe dependancies for JavaScript at load time are now handled better.

14-Nov-2002
Problems fixed:
    1. Bug #638406 Multi-line values in form data were using the platform-specific line ending rather than CRLF.
    2. Bug #638306 Document.writeln was writing the value "13" rather than CRLF as its terminator.

12-Nov-2002
Acknowledgements:
    Thanks to Michael McCallum for adding handling for bad character-set headers and an ant target to build the examples

Problems fixed:
    1. Bad character-set headers from servers would result in an UnsupportedEncodingException.

Additions:
    1. Added support for the location.href property

 9-Nov-2002
Problems fixed:
    1. As of 1.5, HttpUnit was not building if NekoHTML was not in the classpath. This is now fixed.

 7-Nov-2002
Acknowledgements: