@@ -236,7 +236,7 @@ public class PseudoServer {
             return (WebResource) resource;
         } else if (resource instanceof PseudoServlet) {
             return getResource( (PseudoServlet) resource, request );
-        } else {
+        } else if (request.getURI().endsWith( ".class" )) {
             for (Iterator iterator = _classpathDirs.iterator(); iterator.hasNext();) {
                 String directory = (String) iterator.next();
                 if (request.getURI().startsWith( directory )) {
@@ -244,6 +244,25 @@ public class PseudoServer {
                     return new WebResource( getClass().getClassLoader().getResourceAsStream( resourceName ), "application/class", 200 );
                 }
             }
+            return null;
+        } else if (request.getURI().endsWith( ".zip" ) || request.getURI().endsWith( ".jar" )) {
+            for (Iterator iterator = _classpathDirs.iterator(); iterator.hasNext();) {
+                String directory = (String) iterator.next();
+                if (request.getURI().startsWith( directory )) {
+                    String resourceName = request.getURI().substring( directory.length()+1 );
+                    String classPath = System.getProperty( "java.class.path" );
+                    StringTokenizer st = new StringTokenizer( classPath, ":;," );
+                    while (st.hasMoreTokens()) {
+                        String file = st.nextToken();
+                        if (file.endsWith( resourceName )) {
+                            File f = new File( file );
+                            return new WebResource( new FileInputStream( f ), "application/zip", 200 );
+                        }
+                    }
+                }
+            }
+            return null;
+        } else {
             return null;
         }
     }
